completed the homepage added the table

--- a/src/components/featured-chart/featured.scss
+++ b/src/components/featured-chart/featured.scss
@@ -24,8 +24,9 @@ padding: 10px;
     gap: 15px;
 
     .featuredChart{
-        width: 100px;
+        width: 130px;
         height: 100px;
+        margin-bottom: 10px;
     }
 
     .title{
