--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,7 @@
 .navbar{
     height: 50px;
     border-bottom: 0.5px solid rgb(231,228,228);
+    padding: 4.5px 0;
     display: flex;
 align-items: center;
 font-size: 14px;
